# colors

./: .gitmodules  Cargo.toml  Justfile
output/itermcolors/: ayu.itermcolors  getfresh.itermcolors  grta.itermcolors  io.itermcolors  ix.itermcolors  lyphea.itermcolors
output/vim/: getfresh.vim  grta.vim  io.vim  ix.vim  lyphea.vim
output/vim/colors/: ayu.vim  getfresh.vim  grta.vim  io.vim  ix.vim  lyphea.vim
schemes/: ayu.yml  getfresh.yml  grta.yml  io.yml  ix.yml  lyphea.yml
src/: main.rs
templates/: iterm2.mustache  vim.mustache
