[package]
name = "colors"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mustache = "*"
structopt = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
